# Causality

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.ko.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/: settings.json
.codex/: causality-routing.md
checklists/: README.md  verification-before-completion.md
docs/: agent_automation.md  causality_integration.md  code-review-2026-06-13.md  installation.md  ouroboros_integration.md  project-summary.md
examples/: goal_contract.json
memory/: README.md
plugins/: README.md
scripts/: doctor.ps1  doctor.sh  install.ps1  install.sh  register-update-task.ps1  update-codex-cli.ps1  update.ps1  update.sh
skills/: README.md  causality-orchestrate.md  onboard-project.md
tests/: test_agenda.py  test_agent_bootstrap.py  test_agent_harness.py  test_automatic_orchestration_contract.py  test_browser_adapter.py  test_cli.py  test_contract_harness.py  test_contracts.py  test_doc_budget.py  test_durable.py  test_e2e.py  test_engine.py  test_execution.py  test_external_resume_context.py  test_external_skill_operations.py  test_gates.py  test_guardrails.py  test_http_adapter.py  test_ledger.py  test_loop.py  test_mcp_browser_external.py  test_mcp_external.py  test_mcp_http_external.py  test_mcp_resume_context.py  test_mcp_server.py  test_mcp_skill_operations.py  test_mcp_workflow_external.py  test_memory.py  test_orchestration_checkpoint.py  test_orchestration_driver.py  test_orchestration_external.py  test_orchestration_hitl.py  test_playbooks.py  test_reflect.py  test_review.py  test_review_batches.py  (+11 more)
(+95 files in other folders)
